--- a/waybar/style.css
+++ b/waybar/style.css
@@ -25,7 +25,7 @@ window#waybar {
 
 #workspaces {
   background-color: #32302F;
-  border-radius: 0px;
+  border-radius: 0;
 }
 #workspaces button.focused {
   background-color: #458588;
