--- a/waybar/style.css
+++ b/waybar/style.css
@@ -29,6 +29,7 @@ window#waybar {
 }
 #workspaces button.active {
   background-color: #458588;
+  border-radius: 0;
 }
 #workspaces button.urgent {
   background-color: #CC241D;
