Fix waybar fonts

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,6 @@
 * {
   /* `otf-font-awesome` is required to be installed for icons */
-  font-family: FontAwesome, JetBrainsMono Nerd Font Mono, sans-serif;
+  font-family: FontAwesome, JetBrainsMono NFM Light, sans-serif;
   font-size: 18px;
 }
 
