--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,6 +5,8 @@
   /* font-family: FontAwesome, JetBrainsMono NFM Light, sans-serif; */
   font-family: FontAwesome, Iosevka NF, sans-serif;
   font-size: 18px;
+  font-feature-settings: "dlig";
+  font-feature-settings: "ss14";
   color: @text;
 }
 
