--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,4 +1,5 @@
-@import "catppuccin-mocha.css";
+/* @import "catppuccin-mocha.css"; */
+@import "nord.css";
 
 * {
   /* `otf-font-awesome` is required to be installed for icons */
@@ -26,7 +27,7 @@ window#waybar {
 }
 
 #cpu {
-  background-color: @maroon;
+  background-color: @red;
 }
 
 #workspaces {
@@ -34,7 +35,7 @@ window#waybar {
   border-radius: 0;
 }
 #workspaces button.active {
-  background-color: @surface0;
+  background-color: @darkgray;
   border-radius: 0;
 }
 #workspaces button.urgent {
@@ -43,11 +44,11 @@ window#waybar {
 }
 
 #memory {
-  background-color: @mauve;
+  background-color: @orange;
 }
 
 #disk {
-  background-color: @lavender;
+  background-color: @yellow;
 }
 
 #cpu,
@@ -61,6 +62,6 @@ window#waybar {
 }
 
 #network {
-  background-color: @surface0;
+  background-color: @darkgray;
   color: @text;
 }
