--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,7 +5,7 @@
   /* `otf-font-awesome` is required to be installed for icons */
   /* font-family: FontAwesome, JetBrainsMono NFM Light, sans-serif; */
   /* font-family: FontAwesome, IosevkaTerm NF, sans-serif; */
-  font-family: FontAwesome, VictorMono NFM, sans-serif;
+  font-family: FontAwesome, InconsolataLGC Nerd Font, sans-serif;
   font-size: 24px;
   font-feature-settings: "dlig";
   font-feature-settings: "ss14";
