Moving to gruvbox-material-soft

--- a/waybar/gruvbox.css
+++ b/waybar/gruvbox.css
@@ -1,6 +1,6 @@
 @define-color text #d4be98;
-@define-color base #282828;
-@define-color base2 #32302f;
+@define-color base #32302f;
+@define-color base2 #282828;
 @define-color base3 #45403d;
 @define-color blue #7daea3;
 @define-color red #ea6962;
