Moving fonts, changing plugins

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,10 +5,10 @@
   /* `otf-font-awesome` is required to be installed for icons */
   /* font-family: FontAwesome, JetBrainsMono NFM Light, sans-serif; */
   /* font-family: FontAwesome, IosevkaTerm NF, sans-serif; */
-  font-family: FontAwesome, Fira Code Nerd Font, sans-serif;
+  font-family: FontAwesome, Iosevka Nerd Font Mono, sans-serif;
   font-size: 22px;
   font-feature-settings: "dlig";
-  font-feature-settings: "zero";
+  font-feature-settings: "ss05";
   color: @text;
 }
 
