--- a/waybar/style.css
+++ b/waybar/style.css
@@ -6,7 +6,6 @@
   font-size: 20px;
   font-feature-settings: "calt";
   font-feature-settings: "zero";
-  color: @text;
 }
 
 window#waybar {
@@ -28,10 +27,10 @@ window#waybar {
 
 #workspaces {
   background-color: @workspace-bg;
-  color: @red;
 }
 #workspaces button.active {
   background-color: @workspace-active-bg;
+  color: @background;
 }
 #workspaces button.urgent {
   background-color: @workspace-urgent-bg;
